implement add notice to favorites
